--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -591,7 +591,7 @@
       img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
         &.big {
           min-height: 35vh;
           padding: 0 7px;
@@ -607,6 +607,11 @@
       }
       .info_wrapper {
         padding-bottom: 12px;
+        display: inline-block;
+        width: 100%;
+        .secondary_title{
+          display: inline-flex;
+        }
       }
     }
   }
