--- a/src/styles/global/pages/_upload-img.scss
+++ b/src/styles/global/pages/_upload-img.scss
@@ -382,7 +382,7 @@
           }
         }
         .quill {
-          padding: 20px;
+          padding:0 20px 20px;
           height: 250px;
         }
       }
