--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -179,6 +179,10 @@
         border: 1px solid #ccc;
         float: left;
         width: 100%;
+        padding:10px;
+        .applicant-label{
+          padding: 0 5px;
+        }
       }
       .filled-strip {
         display: block;
