--- a/src/styles/global/pages/_upload-img.scss
+++ b/src/styles/global/pages/_upload-img.scss
@@ -25,6 +25,11 @@
   }
   .modal-dialog {
     width: 915px;
+    @media only screen and (max-width: 1280px){
+      width:90%;
+      margin: 0 auto;
+      padding: 30px 0;
+    }
   }
   .modal-content {
     float: left;
@@ -258,6 +263,11 @@
 .upload-pic-modal.create-campaign-modal{
   .modal-dialog{
     width:915px;
+    @media only screen and (max-width: 1280px){
+      width:90%;
+      margin: 0 auto;
+      padding: 30px 0;
+    }
     .modal-content{
       text-align: center;
       height: auto;
@@ -286,6 +296,9 @@
         }
         .upload-form{
           padding: 20px 190px;
+          @media only screen and (max-width: 1280px){
+            padding: 20px 40px;
+          }
           height: 100%;
           border:none;
           .user-title{
@@ -306,14 +319,20 @@
             }
             .create-campaign-crop-pic{
               .feed_image{
+                width:520px;
+                height: 300px;
+                position: relative;
+                @media only screen and (max-width: 1280px){
+                  margin: 0 auto;
+                }
                   img{
                     width: 100%;
                     position: absolute;
-                    bottom: 10px;
-                    right: 10px;
+                    bottom: 0;
+                    right: 0;
                     top: 0;
                     height: 100%;
-                    object-fit: contain;
+                    object-fit: cover;
                   }
               }
             }
