--- a/src/styles/global/cms/_cms.scss
+++ b/src/styles/global/cms/_cms.scss
@@ -77,6 +77,9 @@ header {
       padding: 20px;
       background: #ffffff;
     }
+    .other-pages-content{
+      height:90vh;
+    }
   }
   .support-accordion {
     .panel {
