--- a/src/styles/global/pages/_about.scss
+++ b/src/styles/global/pages/_about.scss
@@ -1,6 +1,8 @@
 .about-wrapper {
   background: $white_color;
   padding: 20px 30px;
+  display: inline-block;
+  width: 100%;
   // margin-bottom: 35px;
   .section-title {
     font-family: "Helvetica-Bold";
@@ -27,6 +29,11 @@
         }
       }
     }
+  }
+  .profile-description{
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 35px;
   }
   .personal-interest {
     .tags-wrapper {
