--- a/src/styles/global/pages/_upload-img.scss
+++ b/src/styles/global/pages/_upload-img.scss
@@ -358,6 +358,9 @@
         .range-wrapr.add-wrapper{
           position: relative;
           padding: 0 50px;
+          // width: 518px;
+          // float: none;
+          // margin: auto;
           .min-profile-pic{
             width: 20px;
             height: 20px;
@@ -381,6 +384,9 @@
       .add-wrapper.create-camp-ad-wrapr{
         img{
           top: -41px;
+          @media only screen and (max-width: 991px) and (min-width: 768px){
+            right: 15%;
+          }
         }
       }
     }
@@ -403,7 +409,7 @@
         }
         .quill {
           padding:0 20px 20px;
-          height: 250px;
+          height: 350px;
         }
       }
     }
