campaign share arrow

--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -716,6 +716,7 @@
           float: left;
           img {
             height: 20px;
+            width:auto;
             margin-right: 10px;
           }
         }
