--- a/src/styles/global/pages/_upload-img.scss
+++ b/src/styles/global/pages/_upload-img.scss
@@ -296,7 +296,7 @@
           }
         }
         .upload-form{
-          padding: 20px 155px;
+          padding: 20px 190px;
           @media only screen and (max-width: 991px){
             padding: 20px 40px;
           }
@@ -390,19 +390,24 @@
             left: -7px;
             top: 12px;
           }
+          .add-wrapper.create-camp-ad-wrapr{
+            position: absolute;
+            right: 0;
+            bottom: 55px;
+            width: 30px;
+            height: 20px;
+            background-color: transparent;
+            img{
+              top:33px;
+            }
+            input[type="file"]{
+              top:33px;
+              left:0;
+            }
+          }
         }
       }
-      .add-wrapper.create-camp-ad-wrapr{
-        img{
-          top: -41px;
-          @media only screen and (max-width: 991px) and (min-width: 880px){
-            right: 15%;
-          }
-          @media only screen and (max-width: 879px) and (min-width: 768px){
-            right: 10%;
-          }
-        }
-      }
+      
     }
   }
 }
@@ -431,10 +436,21 @@
   }
 }
 
-.upload-pic-modal.upload-image-modal{
+.upload-file-format{
   .modal-dialog{
+    margin: 120px auto;
     .modal-content{
+      background-color: transparent;
+      .closeBtn{
+        position: absolute;
+        right: -38px;
+        top: -38px;
+        z-index: 9;
+        background: none;
+        border: none;
+      }
       .modal-body{
+        height: auto !important;
         .upload-format{
           h4{
             color: #4a4a4a;
@@ -448,6 +464,7 @@
             width: 200px;
             padding: 20px;
             position: relative;
+            background-color: #fff;
             border:1px solid #ccc;
             margin: 10px auto;
             i{
