--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -1112,10 +1112,14 @@
 }
 
 .user-pics-modal{
+  background:rgba(51,51,51,0.7) !important;
+  &.in{
+    
+  }
   .modal-dialog{
     width: 400px !important;
     position: relative;
-    margin: 80px auto;
+    margin: 120px auto;
     .modal-content{
       .closeBtn {
           position: absolute;
@@ -1150,9 +1154,9 @@
                 }
               }
             }
-            // .control-arrow{
-            //   opacity: 1;
-            // }
+            .control-arrow{
+              opacity: 1;
+            }
             .carousel-status{
               display: none;
             }
