--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -34,6 +34,9 @@ body {
     background-color: white;
   }
 }
+.capitalize {
+  text-transform: capitalize;
+}
 .no-padding {
   padding: 0px !important;
 }
