--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -1,11 +1,10 @@
-
 .create-campaign-modal {
   background: #333;
   &.editor-modal {
     & > .modal-dialog {
       max-width: 915px;
-      @media only screen and (max-width: 1280px){
-        width:75%;
+      @media only screen and (max-width: 1280px) {
+        width: 75%;
         margin: 0 auto;
         padding: 30px 0;
       }
@@ -27,8 +26,8 @@
     // min-height: 80vh;
     // margin: 10vh auto;
     // background-color: white;
-    @media only screen and (max-width: 1280px){
-      width:75%;
+    @media only screen and (max-width: 1280px) {
+      width: 75%;
       margin: 0 auto;
       padding: 30px 0;
     }
@@ -181,8 +180,8 @@
         border: 1px solid #ccc;
         float: left;
         width: 100%;
-        padding:10px;
-        .applicant-label{
+        padding: 10px;
+        .applicant-label {
           padding: 0 5px;
         }
       }
@@ -205,7 +204,7 @@
       padding: 20px;
       .profile_image {
         float: left;
-        &.wid45{
+        &.wid45 {
           width: 45px;
         }
         img {
@@ -330,14 +329,14 @@
         }
       }
     }
-    .upload-img-wrapper{
+    .upload-img-wrapper {
       display: block;
       width: 100%;
       position: relative;
       height: 0;
       padding-bottom: 56.25%;
       overflow: hidden;
-      img{
+      img {
         position: absolute;
         display: block;
         width: 100%;
@@ -349,9 +348,9 @@
         margin: auto;
       }
       video {
-          width: 100%;
-          max-height: 292px;
-          background: black;
+        width: 100%;
+        max-height: 292px;
+        background: black;
       }
     }
     .target-options {
@@ -898,47 +897,50 @@
     }
   }
 }
-.__react_component_tooltip{
-  .normal_title{
+.__react_component_tooltip {
+  .normal_title {
     padding: 15px;
     margin: 0;
     background: #fff;
     border-bottom: 1px solid #777;
-  }  
-  .header-notifications{
-    padding: 0!important;
-    .notification-with-subscribe{
+  }
+  .header-notifications {
+    padding: 0 !important;
+    .notification-with-subscribe {
       padding: 10px 0;
       border-bottom: 2px solid rgba(198, 198, 198, 0.3);
-      &:last-child{
+      &:last-child {
         border-bottom: none;
       }
-      .row{
+      .row {
         padding-left: 15px;
         padding-right: 15px;
       }
-      .user-info{
+      .user-info {
         padding: 10px 0 0 0;
-       .username{
-        color: #4a4a4a;
-        word-break: break-all;
-        font-weight: 600;
-        text-transform: capitalize;
-        white-space: nowrap; 
-        overflow: hidden;
-        text-overflow: ellipsis;
-       }
-       .subtitle{
-         word-break: break-all;
-         padding: 0;
-         white-space: nowrap; 
-         overflow: hidden;
-         text-overflow: ellipsis;
-       }
+        .username {
+          color: #4a4a4a;
+          word-break: break-all;
+          font-weight: 600;
+          text-transform: capitalize;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          a {
+            color: #4a4a4a;
+          }
+        }
+        .subtitle {
+          word-break: break-all;
+          padding: 0;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
       }
-      .community-subscribe{
+      .community-subscribe {
         margin-top: 0;
-        button{
+        button {
           margin-top: 0;
           width: 100px;
         }
@@ -947,14 +949,14 @@
   }
 }
 
-
-.edit-profile-modal{
-  .modal-dialog{
-    .modal-content{
-      .modal-header{}
-      .modal-body{
-        .upload-profile-wrapr{
-          .range-wrapr{
+.edit-profile-modal {
+  .modal-dialog {
+    .modal-content {
+      .modal-header {
+      }
+      .modal-body {
+        .upload-profile-wrapr {
+          .range-wrapr {
             margin: 0 25%;
             text-align: center;
             display: inline-block;
@@ -962,21 +964,21 @@
             padding: 0;
             position: relative;
             height: 60px;
-            .min-profile-pic{
+            .min-profile-pic {
               position: absolute;
               left: 30px;
               z-index: 9;
             }
-            img.max-profile-pic{
+            img.max-profile-pic {
               position: absolute;
               right: 30px;
               z-index: 9;
-              left:initial;
+              left: initial;
             }
-            input[type="range"]{
+            input[type="range"] {
               float: none;
             }
-            .runnable{
+            .runnable {
               left: 80px;
             }
           }
