message section scrollbar

--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -201,6 +201,9 @@
   min-height: 100vh;
   // overflow: auto;
 }
+.main-section{
+  margin-top:70px;
+}
 .left-sidebar{
   position: -moz-sticky;
   position: -ms-sticky;
