--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -1122,7 +1122,7 @@
   .modal-dialog{
     width: 400px !important;
     position: relative;
-    margin: 10% auto 100px;
+    margin: 200px auto 100px;
     .modal-content{
       .closeBtn {
           position: absolute;
