social n/w edit icon n input

--- a/src/styles/global/pages/_editprofile.scss
+++ b/src/styles/global/pages/_editprofile.scss
@@ -4,6 +4,7 @@
   float: left;
   width: 100%;
   margin-bottom: 35px;
+  
   .form-group {
     .options {
       li {
@@ -14,6 +15,11 @@
       width: 100%;
       float: left;
       margin-right: 1%;
+    }
+  }
+  .birth-date{
+    input[type="number"]{
+      width: 31%;
     }
   }
   .edit-profile-title-wrapr {
@@ -43,6 +49,7 @@
         // background: url("../images/pic-1.jpg") no-repeat center 100%;
         // background-size: contain;
       }
+     
       a,
       label {
         font-size: 12px;
@@ -72,6 +79,44 @@
     border: 1px solid #000;
     &:focus {
       border: 1px solid #000;
+    }
+  }
+  .social-link-wrapr{
+    .social-link{
+      span.fa{
+        display: inline-block;
+        float: left; 
+      }
+      .social-text{
+        display: inline-block;
+        float: left;
+        position: unset;
+        padding: 0 10px;
+        width: 15%;
+      }
+      .social-input-field{
+        display: inline-block;
+        float: left;
+        width:70%;
+        padding: 0 10px;
+        input{
+          width:80%;
+          display: inline-block;
+          float: left;
+        }
+        button{
+          width: auto;
+          border:none;
+          background-color: transparent;
+          display: inline-block;
+          float: left;
+          width:20%;
+          text-align: right;
+          i{
+            font-size: 20px;
+          }
+        }
+      }
     }
   }
 }
