--- a/src/styles/global/pages/_about.scss
+++ b/src/styles/global/pages/_about.scss
@@ -113,6 +113,7 @@
 }
 .about-social-wrapr {
   background-color: white;
+  padding: 20px 0 !important;
   .social-link-wrapr {
     padding: 0 30px !important;
     .form-subtitle {
