--- a/src/styles/global/pages/_create-ad.scss
+++ b/src/styles/global/pages/_create-ad.scss
@@ -178,7 +178,7 @@
     // background-color: white;
     @media (max-width: 915px) {
       width: calc(100% - 4%);
-      margin: 30px 2%;
+      // margin: 30px 2%;
     }
   }
   .modal-content {
@@ -417,8 +417,8 @@ a.more-strip.zIndex0 {
     width: 915px;
     @media only screen and (max-width: 991px) {
       width: 85%;
-      margin: 0 auto;
-      padding: 30px 0;
+      // margin: 0 auto;
+      // padding: 30px 0;
     }
     .modal-content {
       text-align: center;
