--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -28,8 +28,8 @@
     // background-color: white;
     @media only screen and (max-width: 1280px) {
       width: 75%;
-      margin: 0 auto;
-      padding: 30px 0;
+      // margin: 0 auto;
+      // padding: 30px 0;
     }
   }
   .modal-content {
