--- a/src/styles/global/pages/_upload-img.scss
+++ b/src/styles/global/pages/_upload-img.scss
@@ -264,8 +264,8 @@
     width: 915px;
     @media only screen and (max-width: 991px) {
       width: 85%;
-      margin: 0 auto;
-      padding: 30px 0;
+      // margin: 0 auto;
+      // padding: 30px 0;
     }
     .modal-content {
       text-align: center;
