--- a/src/styles/global/layout/_header.scss
+++ b/src/styles/global/layout/_header.scss
@@ -46,6 +46,7 @@ header {
       padding: 0;
       margin: 10px 0px;
       width: 60%;
+      position: relative;
       @media (min-width: 992px) and (max-width: 1199px) {
         width: 55%;
       }
