--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -1753,6 +1753,7 @@ section.loader-wrapr {
   background: rgba(51, 51, 51, 0.7) !important;
   .modal-dialog {
     margin: 100px auto;
+    width:500px;
     .modal-content {
       // overflow: visible;
       padding: 0 !important;
@@ -1765,8 +1766,9 @@ section.loader-wrapr {
         border: none;
       }
       .subscriber-tooltip{
-        min-height: auto;
-        max-height: 60vh;
+        // min-height: auto;
+        // max-height: 60vh;
+        height: 500px;
         overflow-y: auto;
         overflow-x: hidden;
         .header-notifications{
@@ -1781,6 +1783,12 @@ section.loader-wrapr {
           padding-bottom: 15px;
           margin-bottom: 15px;
           border-bottom: 1px solid #000;
+        }
+      }
+      .subscribe-btn{
+        button{
+          width:80% !important;
+          margin: 0 auto !important;
         }
       }
     }
