--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -670,6 +670,7 @@ section.loader-wrapr {
   top: 0px;
   left: 0px;
   width: 100%;
+  margin-top: 0 !important;
 }
 .loader {
   position: static;
@@ -1765,30 +1766,35 @@ section.loader-wrapr {
         background-color: transparent;
         border: none;
       }
-      .subscriber-tooltip{
-        // min-height: auto;
-        // max-height: 60vh;
-        height: 500px;
-        overflow-y: auto;
-        overflow-x: hidden;
-        .header-notifications{
-          .user-info{
-            .username{
-              font-weight: bold;
+      .modal-body{
+        padding: 0;
+        .subscriber-tooltip{
+          // min-height: auto;
+          // max-height: 60vh;
+          height: 500px;
+          overflow-y: auto;
+          overflow-x: hidden;
+          .header-notifications{
+            padding: 15px;
+            .user-info{
+              .username{
+                font-weight: bold;
+              }
             }
           }
+          .normal_title{
+            margin-top: 0 !important;
+            padding: 15px;
+            margin-bottom: 15px;
+            border-bottom: 6px solid rgba(51, 51, 51, 0.7);
+          }
         }
-        .normal_title{
-          margin-top: 0 !important;
-          padding-bottom: 15px;
-          margin-bottom: 15px;
-          border-bottom: 1px solid #000;
-        }
-      }
-      .subscribe-btn{
-        button{
-          width:80% !important;
-          margin: 0 auto !important;
+        .subscribe-btn{
+          text-align: right;
+          button{
+            width:80% !important;
+            margin: 0 auto 10px !important;
+          }
         }
       }
     }
