--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -221,7 +221,7 @@
 }
 .left_menu_second {
   background-color: $white_color;
-  z-index: 9;
+  // z-index: 9;
   width: 20%;
   float: left;
   .navbar-nav {
